--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-# MySQL configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/finance_tracker?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Newbigcode@123
+# Database Configuration - Supports both local H2 and Railway PostgreSQL
+spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:testdb}
+spring.datasource.driverClassName=${DATABASE_DRIVER:org.h2.Driver}
+spring.datasource.username=${DATABASE_USERNAME:sa}
+spring.datasource.password=${DATABASE_PASSWORD:}
 
 # Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.H2Dialect}
 
 # Server
-server.port=8080
+server.port=${PORT:8080}
 server.error.include-message=never
 server.error.include-binding-errors=never
 server.error.include-stacktrace=never
@@ -31,4 +33,10 @@ management.endpoint.health.show-details=when-authorized
 
 # Validation
 spring.validation.enabled=true
+
+# CORS Configuration for PWA
+spring.web.cors.allowed-origins=https://abhishekmalviya830.github.io,http://localhost:3000
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
 
