--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ management.endpoint.health.show-details=when-authorized
 spring.validation.enabled=true
 
 # CORS Configuration for PWA
-spring.web.cors.allowed-origins=https://abhishekmalviya830.github.io,http://localhost:3000
+spring.web.cors.allowed-origins=https://abhishekmalviya830.github.io,http://localhost:3000,http://localhost:8000,http://192.168.1.4:8000
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
